--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "crud",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "lorainne",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.5",
     "bootstrap": "^5.3.0-alpha1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
